# django-react-foundation

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
docs/: blueprint.md
python/: README.md  pyproject.toml
python/src/drf_foundation/: __init__.py  auth.py  celery_health.py  checks.py  env.py  middleware.py  permissions.py  pytest_plugin.py  realtime.py  schemas.py  settings_helpers.py  throttling.py  views.py  wire_schema.py
python/src/drf_foundation/management/commands/: export_api_schema.py
python/tests/: django_settings.py  test_auth_module.py  test_celery_health.py  test_checks_module.py  test_management_command.py  test_middleware.py  test_permissions.py  test_realtime.py  test_schemas.py  test_settings_helpers.py  test_throttling.py  test_wire_schema.py  urls.py
python/tests/testapp/: schemas.py
scripts/: new-project.sh  openspec-mark-tasks.py
src/: apiClient.ts  apiConfig.ts  index.ts  queryKeys.ts  realtimeSync.ts  sse.ts  tokenStorage.ts
template/: .gitignore  Makefile  README.md  railway.json
template/.github/workflows/: ci.yml
template/backend/: Dockerfile  docker-compose.dev.yml  docker-compose.test.yml  pyproject.toml
template/backend/accounts/: admin.py  models.py  schemas.py  urls.py  views.py
template/backend/accounts/migrations/: 0001_initial.py
template/backend/config/: apps.py  asgi.py  celery.py  checks.py  env.py  schemas.py  settings.py  test_settings.py  urls.py  views.py  wsgi.py
template/backend/tests/: conftest.py  test_auth.py  test_health.py
template/frontend/: index.html  package.json
template/frontend/src/: App.tsx  main.tsx
template/frontend/src/lib/: api.ts  config.ts  queryClient.ts
template/scripts/: dev.sh  devctl.sh
templates/: entrypoint.sh
tests/: apiClient.test.ts  apiConfig.test.ts  queryKeys.test.ts  tokenStorage.test.ts
