[project]
name = "__PROJECT__"
version = "0.1.0"
description = "__PROJECT__ backend"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6",
    "dj-database-url>=3.1",
    "django>=6.0",
    "django-cors-headers>=4.9",
    "django-drf-foundation[realtime]",
    "djangorestframework>=3.17",
    "djangorestframework-simplejwt>=5.5",
    "granian>=2.7",
    "psycopg[binary,pool]>=3.3",
    "pydantic>=2.13",
    "python-dotenv>=1.2",
    "redis>=5.0",
    "sentry-sdk>=2.66",
    "whitenoise>=6.12",
]

[tool.uv.sources]
django-drf-foundation = { git = "https://github.com/trevor-e/django-react-foundation.git", subdirectory = "python", rev = "v0.5.0" }

[dependency-groups]
dev = [
    "django-stubs>=6.0",
    "djangorestframework-stubs>=3.17",
    # the [reload] extra (watchfiles) powers --reload in dev; prod runs without it
    "granian[reload]>=2.7",
    "pyrefly>=1.1",
    "pytest>=9.0",
    "pytest-django>=4.12",
    "ruff>=0.15",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "DJ", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
"*/migrations/*" = ["ANN", "RUF012", "E501"]
"manage.py" = ["ANN"]

[tool.pyrefly]
project-includes = ["**/*.py"]
project-excludes = ["**/migrations/**", "**/tests/**", ".venv/**"]
replace-imports-with-any = ["celery.*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.test_settings"
python_files = ["test_*.py"]
pythonpath = ["."]
